# structocol

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Cache.gitlab-ci.yml  LICENSE  README.md  Templates.gitlab-ci.yml
include/structocol/: buffers_pool.hpp  buffers_ring.hpp  exceptions.hpp  multiplexing.hpp  protocol_handler.hpp  recycling_buffers_queue.hpp  serialization.hpp  stdio_buffer.hpp  stream_buffer.hpp  structocol.hpp  type_utilities.hpp  vector_buffer.hpp
src/structocol/: buffers_queuing.test.cpp  dummy.cpp  protocol_handler.test.cpp  serialization.test.cpp  serialized_size.test.cpp  stdio_buffer.test.cpp  vector_buffer.test.cpp
tests/: buffers_queuing.test.cpp  serialization.test.cpp  serialized_size.test.cpp  vector_buffer.test.cpp
tools/: HeaderFileTemplate.txt
